[package]
name = "pallet-nodle-uniques"
version = { workspace = true }
authors = ["Nodle <support@nodle.com>"]
edition = "2021"

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "scale-info/std",
  "frame-support/std",
  "frame-benchmarking/std",
  "frame-system/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "pallet-uniques/std",
  "pallet-balances/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "pallet-uniques/try-runtime"
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-uniques/runtime-benchmarks",
]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", optional = true, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = [
  "derive",
] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
pallet-uniques = { workspace = true, default-features = false }
support = { path = "../../support", default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = false }
