[package]
name = "pallet-wnodl"
version = "2.0.18"
description = "Initiate and settle wrapped Nodle on Ethereum"
authors = ["Nodle team-chain <https://github.com/orgs/NodleCode/teams/blockchain>"]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/NodleCode/chain"

[dependencies]
parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
ethereum-types = { version = "0.12.1", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }

support = { path = "../../support" }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
pallet-reserve = { path = "../../pallets/reserve", default-features = false }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"ethereum-types/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-balances/std",
    "pallet-reserve/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
