[package]
name = "pallet-wnodl"
version = "2.0.19"
description = "Initiate and settle wrapped Nodle on Ethereum"
authors = ["Nodle team-chain <https://github.com/orgs/NodleCode/teams/blockchain>"]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/NodleCode/chain"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
ethereum-types = { version = "0.13.1", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }

support = { path = "../../support" }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
pallet-reserve = { path = "../../pallets/reserve", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"ethereum-types/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-balances/std",
    "pallet-reserve/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
