[package]
authors = ['Parallel Team']
edition = '2021'
name    = 'pallet-xcm-helper'
version = '1.8.4'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { package = 'parity-scale-codec', version = '3.0.0', features = ['max-encoded-len'], default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false, optional = true }
frame-support      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
frame-system       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
pallet-assets      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
pallet-traits      = { path = '../traits', default-features = false }
pallet-xcm         = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22", default-features = false }
primitives         = { path = '../../primitives', default-features = false }
scale-info         = { version = '2.1', default-features = false, features = ['derive'] }
sp-core            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
sp-io              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
sp-runtime         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
sp-std             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
xcm                = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22", default-features = false }
xcm-executor       = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22", default-features = false }

[dev-dependencies]
cumulus-pallet-dmp-queue        = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.22" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.22" }
cumulus-pallet-xcm              = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.22" }
cumulus-pallet-xcmp-queue       = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.22" }
kusama-runtime                  = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22", features = ['runtime-benchmarks'] }
orml-xcm-support                = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.22" }
orml-xtokens                    = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.22" }
pallet-babe                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
pallet-balances                 = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
pallet-session                  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
pallet-timestamp                = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
pallet-utility                  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
parachain-info                  = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.22" }
polkadot-core-primitives        = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }
polkadot-parachain              = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }
polkadot-runtime-parachains     = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }
serde                           = { version = '1.0.136' }
sp-io                           = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
xcm-builder                     = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }
xcm-executor                    = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }
xcm-simulator                   = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'sp-runtime/std',
  'scale-info/std',
  'sp-std/std',
  'xcm/std',
  'xcm-executor/std',
  'pallet-assets/std',
  'pallet-xcm/std',
  'primitives/std',
  'pallet-traits/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
