[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'nodle-chain-runtime-wasm'
version = '1.0.0'
[dependencies.nodle-chain-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['nodle-chain-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
