[package]
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2021"
name = "runtime-eden"
version = "2.0.30"

[features]
default = ["std"]
std = [
  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "frame-try-runtime/std",
  "primitives/std",
  "sp-consensus-aura/std",
  "frame-system-rpc-runtime-api/std",
  "pallet-allocations/std",
  "pallet-authority-discovery/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-grants/std",
  "pallet-im-online/std",
  "pallet-mandate/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-offences/std",
  "pallet-randomness-collective-flip/std",
  "pallet-reserve/std",
  "pallet-scheduler/std",
  "pallet-preimage/std",
  "pallet-session/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-uniques/std",
  "pallet-utility/std",
  "pallet-aura/std",
  "pallet-collator-selection/std",
  "pallet-contracts-primitives/std",
  "pallet-contracts/std",
  "pallet-xcm/std",
  "polkadot-parachain/std",
  "polkadot-runtime-common/std",
  "xcm/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "orml-xtokens/std",
  "orml-traits/std",
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-dmp-queue/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-timestamp/std",
  "cumulus-primitives-utility/std",
  "parachain-info/std",
  "codec/std",
  "safe-mix/std",
  "serde",
  "sp-api/std",
  "sp-application-crypto/std",
  "sp-consensus-babe/std",
  "sp-block-builder/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "sp-npos-elections/std",
  "pallet-xcm-benchmarks/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-allocations/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-grants/runtime-benchmarks",
  "pallet-im-online/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-reserve/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-preimage/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-uniques/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-collator-selection/runtime-benchmarks",
  "pallet-membership/runtime-benchmarks",
  "pallet-contracts/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "xcm/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "xcm-executor/runtime-benchmarks",
  "pallet-xcm-benchmarks/runtime-benchmarks",
  "cumulus-pallet-xcmp-queue/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "frame-executive/try-runtime",
  "frame-try-runtime",
  "frame-system/try-runtime",
  "frame-support/try-runtime",
  "pallet-allocations/try-runtime",
  "pallet-authority-discovery/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-collective/try-runtime",
  "pallet-grants/try-runtime",
  "pallet-im-online/try-runtime",
  "pallet-mandate/try-runtime",
  "pallet-membership/try-runtime",
  "pallet-multisig/try-runtime",
  "pallet-offences/try-runtime",
  "pallet-randomness-collective-flip/try-runtime",
  "pallet-reserve/try-runtime",
  "pallet-scheduler/try-runtime",
  "pallet-preimage/try-runtime",
  "pallet-session/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-uniques/try-runtime",
  "pallet-utility/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-collator-selection/try-runtime",
  "pallet-contracts/try-runtime",
  "cumulus-pallet-aura-ext/try-runtime",
  "cumulus-pallet-dmp-queue/try-runtime",
  "cumulus-pallet-parachain-system/try-runtime",
  "cumulus-pallet-xcm/try-runtime",
  "cumulus-pallet-xcmp-queue/try-runtime",
  "pallet-xcm/try-runtime",
  "parachain-info/try-runtime",
  "orml-xtokens/try-runtime",
]

[dependencies]
static_assertions = "1.1.0"
getrandom = { version = "0.2", features = ["js"] }
safe-mix = { version = "1.0.1", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", optional = true, features = ["derive"] }
smallvec = "1.9.0"

lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-membership = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-preimage = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-aura = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.37" }

cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }
pallet-xcm-benchmarks = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }

pallet-contracts = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }

polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37" }
xcm = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }
xcm-builder = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }
xcm-executor = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.37" }
pallet-collator-selection = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.37" }
parachain-info = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.37" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.37" }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", optional = true }
primitives = { default-features = false, path = "../../primitives" }
pallet-allocations = { default-features = false, path = "../../pallets/allocations" }
pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
pallet-grants = { default-features = false, path = "../../pallets/grants" }
pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.37", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.37", default-features = false }
[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
