[package]
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2021"
name = "runtime-eden"
version = "2.4.2"

[features]
default = ["std"]
std = [
  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "frame-try-runtime/std",
  "primitives/std",
  "sp-consensus-aura/std",
  "frame-system-rpc-runtime-api/std",
  "pallet-allocations/std",
  "pallet-authority-discovery/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-grants/std",
  "pallet-im-online/std",
  "pallet-mandate/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-nodle-uniques/std",
  "pallet-sponsorship/std",
  "pallet-offences/std",
  "pallet-insecure-randomness-collective-flip/std",
  "pallet-reserve/std",
  "pallet-scheduler/std",
  "pallet-preimage/std",
  "pallet-session/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-uniques/std",
  "pallet-utility/std",
  "pallet-aura/std",
  "pallet-collator-selection/std",
  "pallet-contracts/std",
  "pallet-xcm/std",
  "pallet-identity/std",
  "polkadot-parachain-primitives/std",
  "polkadot-runtime-common/std",
  "xcm/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-dmp-queue/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-timestamp/std",
  "cumulus-primitives-utility/std",
  "parachain-info/std",
  "codec/std",
  "safe-mix/std",
  "serde",
  "sp-api/std",
  "sp-application-crypto/std",
  "sp-consensus-babe/std",
  "sp-block-builder/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-storage/std",
  "sp-session/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "sp-npos-elections/std",
  "pallet-xcm-benchmarks/std",
 	"pallet-message-queue/std",
	"parachains-common/std"
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-allocations/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-grants/runtime-benchmarks",
  "pallet-im-online/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-reserve/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-preimage/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-uniques/runtime-benchmarks",
  "pallet-nodle-uniques/runtime-benchmarks",
  "pallet-sponsorship/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-collator-selection/runtime-benchmarks",
  "pallet-membership/runtime-benchmarks",
  "pallet-contracts/runtime-benchmarks",
  "pallet-identity/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "xcm-executor/runtime-benchmarks",
  "pallet-xcm-benchmarks/runtime-benchmarks",
  "cumulus-pallet-xcmp-queue/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "cumulus-pallet-parachain-system/runtime-benchmarks",
  "cumulus-pallet-dmp-queue/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"parachains-common/runtime-benchmarks"
]
try-runtime = [
  "frame-executive/try-runtime",
  "frame-try-runtime",
  "frame-system/try-runtime",
  "frame-support/try-runtime",
  "pallet-allocations/try-runtime",
  "pallet-authority-discovery/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-collective/try-runtime",
  "pallet-grants/try-runtime",
  "pallet-im-online/try-runtime",
  "pallet-mandate/try-runtime",
  "pallet-membership/try-runtime",
  "pallet-multisig/try-runtime",
  "pallet-sponsorship/try-runtime",
  "pallet-nodle-uniques/try-runtime",
  "pallet-offences/try-runtime",
  "pallet-insecure-randomness-collective-flip/try-runtime",
  "pallet-reserve/try-runtime",
  "pallet-scheduler/try-runtime",
  "pallet-preimage/try-runtime",
  "pallet-session/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-uniques/try-runtime",
  "pallet-utility/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-collator-selection/try-runtime",
  "pallet-contracts/try-runtime",
  "pallet-identity/try-runtime",
  "cumulus-pallet-aura-ext/try-runtime",
  "cumulus-pallet-dmp-queue/try-runtime",
  "cumulus-pallet-parachain-system/try-runtime",
  "cumulus-pallet-xcm/try-runtime",
  "cumulus-pallet-xcmp-queue/try-runtime",
  "pallet-xcm/try-runtime",
  "parachain-info/try-runtime",
  "cumulus-pallet-parachain-system/try-runtime",
  "pallet-message-queue/try-runtime"
]

[dependencies]
static_assertions = "1.1.0"
getrandom = { version = "0.2", features = ["js"] }
safe-mix = { version = "1.0.1", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.4.1" }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", optional = true, features = ["derive"] }
smallvec = "1.9.0"

lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-authority-discovery = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-message-queue = { workspace = true }
pallet-collective = { workspace = true }
pallet-im-online = { workspace = true }
pallet-membership = { workspace = true }
pallet-multisig = { workspace = true }
pallet-offences = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-preimage = { workspace = true }
pallet-session = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-uniques = { workspace = true }
pallet-utility = { workspace = true }
pallet-aura = { workspace = true }
pallet-identity = { workspace = true }

cumulus-pallet-xcmp-queue = { workspace = true, default-features = false }
pallet-xcm = { workspace = true }
pallet-xcm-benchmarks = { workspace = true }

pallet-contracts = { workspace = true }

polkadot-parachain-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
polkadot-primitives = { workspace = true }

xcm = { package = "staging-xcm", workspace = true, default-features = false }
xcm-builder = { package="staging-xcm-builder", workspace = true, default-features = false }
xcm-executor = { package="staging-xcm-executor", workspace = true, default-features = false }
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
pallet-collator-selection = { workspace = true }
parachains-common = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
parachain-info = { package = "staging-parachain-info", workspace = true, default-features = false }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-storage = { workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-npos-elections = { workspace = true }
sp-consensus-aura = { workspace = true }
frame-try-runtime = { workspace = true, default-features = false, optional = true }
primitives = { default-features = false, path = "../../primitives" }
pallet-allocations = { default-features = false, path = "../../pallets/allocations" }
pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
pallet-grants = { default-features = false, path = "../../pallets/grants" }
pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
pallet-sponsorship = { default-features = false, path = "../../pallets/sponsorship" }
pallet-nodle-uniques = { default-features = false, path = "../../pallets/uniques" }

[build-dependencies]
substrate-wasm-builder = { workspace = true }
